data/derived/sp14/progs/unify/prog3203.ml.out
Characters 179-180:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list -> 'b -> 'c list * int list
       but an expression was expected of type 'a list -> 'b -> 'a list
       Type 'c list * int list is not compatible with type 'a list 
